--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ h1{
 
 p{
  font-size: 0.9375rem;
+ width: 90%;
 }
 
 .col{
@@ -66,6 +67,10 @@ gap: 5.5em;
 
 .col2{
  color: hsl(184, 100%, 22%);
+}
+
+.col3{
+ color: hsl(179, 100%, 13%);
 }
 
 .context:nth-of-type(2){
